--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -93,6 +93,8 @@ tile.purple_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝldɹnԀ
 //tile.gray_candy_cane_pillar.name=<newline>
 //tile.black_candy_cane_pillar.name=<newline>
 
+//tile.green_hill_grass_block.name=<newline>
+//tile.green_hill_dirt.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
@@ -131,6 +133,25 @@ item.super_star.name=ɹɐʇS ɹǝdnS
 item.yellow_coin.name=uᴉoƆ ʍollǝℲ
 item.red_coin.name=uᴉoƆ pǝᴚ
 item.blue_coin.name=uᴉoƆ ǝnlᗺ
+
+//item.annoying_dog.name=<newline>
+
+item.smash_ball.name=llɐᗺ ɥsɐɯS
+
+item.record_blank.name=ɔsᴉp ɔᴉsnW ʞuɐlᗺ
+item.record.champions_road.desc=pɐoᴚ s,uoᴉdɯɐɥƆ - plɹoM ᗡƐ oᴉɹɐW ɹǝdnS
+item.record.fly_octo_fly.desc=ʎlℲ oʇɔO ʎlℲ - ᘔ uooʇɐldS
+item.record.vampire_killer.desc=ɹǝllᴉʞ ǝɹᴉdɯɐΛ - ʇuǝɯǝƃpnſ ɐᴉuɐʌǝlʇsɐƆ
+
+item.record.nb_sweden.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) uǝpǝʍS - 8ƖㄣƆ
+item.record.nb_buoy_base_galaxy.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) ʎxɐlɐפ ǝsɐᗺ ʎonᗺ - ʎxɐlɐפ oᴉɹɐW ɹǝdnS
+item.record.nb_waluigi_pinball.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) llɐquᴉԀ ᴉƃᴉnlɐM - Sp ʇɹɐʞ oᴉɹɐW
+item.record.nb_harvest_hazards.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) spɹɐzɐH ʇsǝʌɹɐH - ǝzǝǝɹℲ lɐɔᴉdoɹ┴ :ʎɹʇunoƆ ƃuoʞ ʎǝʞuop
+
+--- COSTUMES ---
+item.headphones.name=sǝuoɥdpɐǝH
+//item.christmas_hat.name=<newline>
+
 item.cappy.name=ʎddɐƆ
 item.luigi_cap.name=dɐƆ s,ᴉƃᴉn˥
 item.wario_cap.name=dɐƆ s,oᴉɹɐM
@@ -140,33 +161,19 @@ item.wing_cap.name=dɐƆ ƃuᴉM
 item.gooigi_cap.name=dɐƆ s,ᴉƃᴉooפ
 item.princess_peach_crown.name=uʍoɹƆ s,ɥɔɐǝԀ ssǝɔuᴉɹԀ
 item.princess_daisy_crown.name=uʍoɹƆ s,ʎsᴉɐp ssǝɔuᴉɹԀ
+//item.rosalina_crown.name=<newline>
 item.pink_gold_peach_crown.name=uʍoɹƆ s,ɥɔɐǝԀ ploפ ʞuᴉԀ
 item.super_crown.name=uʍoɹƆ ɹǝdnS
-//item.rosalina_crown.name=<newline>
 //item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=ɐuɐpuɐᗺ
 
 //item.top_hat.name=<newline>
 
-item.smash_ball.name=llɐᗺ ɥsɐɯS
-
-//item.annoying_dog.name=<newline>
-
 item.ralsei_hat.name=ʇɐH s,ᴉǝslɐᴚ
-
-item.headphones.name=sǝuoɥdpɐǝH
-item.record_blank.name=ɔsᴉp ɔᴉsnW ʞuɐlᗺ
-item.record.champions_road.desc=pɐoᴚ s,uoᴉdɯɐɥƆ - plɹoM ᗡƐ oᴉɹɐW ɹǝdnS
-item.record.fly_octo_fly.desc=ʎlℲ oʇɔO ʎlℲ - ᘔ uooʇɐldS
-item.record.vampire_killer.desc=ɹǝllᴉʞ ǝɹᴉdɯɐΛ - ʇuǝɯǝƃpnſ ɐᴉuɐʌǝlʇsɐƆ
 
 item.mayro_cap.name=dɐƆ s,oɹʎɐW
 item.noteblock_head.name=pɐǝH s,ʞɔolᗺǝʇoN
-item.record.nb_sweden.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) uǝpǝʍS - 8ƖㄣƆ
-item.record.nb_buoy_base_galaxy.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) ʎxɐlɐפ ǝsɐᗺ ʎonᗺ - ʎxɐlɐפ oᴉɹɐW ɹǝdnS
-item.record.nb_waluigi_pinball.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) llɐquᴉԀ ᴉƃᴉnlɐM - Sp ʇɹɐʞ oᴉɹɐW
-item.record.nb_harvest_hazards.desc=(xᴉɯǝɹ ʞɔolᗺǝʇoN) spɹɐzɐH ʇsǝʌɹɐH - ǝzǝǝɹℲ lɐɔᴉdoɹ┴ :ʎɹʇunoƆ ƃuoʞ ʎǝʞuop
 
 --- ENTITIES ---
 entity.toad.name=pɐo┴
