--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -93,6 +93,8 @@ tile.light_gray_candy_cane_pillar.name=Light Gray Candy Cane Pillar
 tile.gray_candy_cane_pillar.name=Gray Candy Cane Pillar
 tile.black_candy_cane_pillar.name=Black Candy Cane Pillar
 
+tile.green_hill_grass_block.name=Green Hill Grass Block
+tile.green_hill_dirt.name=Green Hill Dirt
 tile.yellow_studiopolis_clapper.name=Yellow Studiopolis Clapper
 tile.blue_studiopolis_clapper.name=Blue Studiopolis Clapper
 
@@ -131,6 +133,25 @@ item.super_star.name=Super Star
 item.yellow_coin.name=Yellow Coin
 item.red_coin.name=Red Coin
 item.blue_coin.name=Blue Coin
+
+item.smash_ball.name=Smash Ball
+
+item.annoying_dog.name=Annoying Dog
+
+item.record_blank.name=Blank Music Disc
+item.record.champions_road.desc=Super Mario 3D World - Champion's Road
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
+
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- COSTUMES ---
+item.headphones.name=Headphones
+item.christmas_hat.name=Christmas Hat
+
 item.cappy.name=Cappy
 item.luigi_cap.name=Luigi Cap
 item.wario_cap.name=Wario Cap
@@ -140,33 +161,19 @@ item.wing_cap.name=Wing Cap
 item.gooigi_cap.name=Gooigi's Cap
 item.princess_peach_crown.name=Princess Peach's Crown
 item.princess_daisy_crown.name=Princess Daisy's Crown
+item.rosalina_crown.name=Rosalina's Crown
 item.pink_gold_peach_crown.name=Pink Gold Peach's Crown
 item.super_crown.name=Super Crown
-item.rosalina_crown.name=Rosalina's Crown
 item.broque_monsieur_head.name=Broque Monsieur's Head
 
 item.bandana.name=Bandana
 
 item.top_hat.name=Top Hat
 
-item.smash_ball.name=Smash Ball
-
-item.annoying_dog.name=Annoying Dog
-
 item.ralsei_hat.name=Ralsei's Hat
-
-item.headphones.name=Headphones
-item.record_blank.name=Blank Music Disc
-item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
-item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
 item.mayro_cap.name=Mayro's Cap
 item.noteblock_head.name=NoteBlock's Head
-item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
-item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
-item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
-item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
 
 --- ENTITIES ---
 entity.toad.name=Toad
