--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -93,6 +93,8 @@ tile.purple_candy_cane_pillar.name=piler de bobon de novel sauf que c pourpr
 //tile.gray_candy_cane_pillar.name=<newline>
 //tile.black_candy_cane_pillar.name=<newline>
 
+//tile.green_hill_grass_block.name=<newline>
+//tile.green_hill_dirt.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
@@ -131,6 +133,25 @@ item.super_star.name=supare etoile
 item.yellow_coin.name=fric jaunne
 item.red_coin.name=flouz rouj
 item.blue_coin.name=firc lbeu ohoh
+
+item.smash_ball.name=boul smash bros
+
+//item.annoying_dog.name=<newline>
+
+item.record_blank.name=diske rien dedans
+item.record.champions_road.desc=Super Mario 3D World - Champion's Road
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
+
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- COSTUMES ---
+item.headphones.name=ecouteur
+//item.christmas_hat.name=<newline>
+
 item.cappy.name=capi
 item.luigi_cap.name=casqut luiji
 item.wario_cap.name=casqeut a worio
@@ -140,33 +161,19 @@ item.wing_cap.name=caskette ailé
 item.gooigi_cap.name=casett de goiii lo!l c du slim block en fait??!
 item.princess_peach_crown.name=couron disi
 item.princess_daisy_crown.name=couraun peeach
-item.pink_gold_peach_crown.name=couraun pech ros dorai
-item.super_crown.name=couraune bien supair coule. 
 //item.rosalina_crown.name=<newline>
+item.pink_gold_peach_crown.name=couraun pech ros dorai
+item.super_crown.name=couraune bien supair coule.
 //item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=banade
 
 //item.top_hat.name=<newline>
 
-item.smash_ball.name=boul smash bros
-
-//item.annoying_dog.name=<newline>
-
 item.ralsei_hat.name=chapo de ralsi
-
-item.headphones.name=ecouteur
-item.record_blank.name=diske rien dedans
-item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
-item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
 item.mayro_cap.name=kaetse maryo
 item.noteblock_head.name=tete nau tblok
-item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
-item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
-item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
-item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
 
 --- ENTITIES ---
 entity.toad.name=BUP BUP
