--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -93,6 +93,8 @@ tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 //tile.gray_candy_cane_pillar.name=<newline>
 //tile.black_candy_cane_pillar.name=<newline>
 
+//tile.green_hill_grass_block.name=<newline>
+//tile.green_hill_dirt.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
@@ -131,6 +133,25 @@ item.super_star.name=無敵星
 item.yellow_coin.name=黃幣
 item.red_coin.name=紅幣
 item.blue_coin.name=藍幣
+
+item.smash_ball.name=粉碎球
+
+//item.annoying_dog.name=<newline>
+
+item.record_blank.name=空白音樂唱片
+item.record.champions_road.desc=Super Mario 3D World - Champion's Road
+item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
+item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
+
+item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
+item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
+item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
+item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
+
+--- COSTUMES ---
+item.headphones.name=耳機
+//item.christmas_hat.name=<newline>
+
 item.cappy.name=凱皮
 item.luigi_cap.name=路易的帽子
 item.wario_cap.name=瓦裡奧的帽子
@@ -140,33 +161,19 @@ item.wing_cap.name=翼帽
 item.gooigi_cap.name=古基的帽子
 item.princess_peach_crown.name=碧奇公主的王冠
 item.princess_daisy_crown.name=黛西公主的王冠
+//item.rosalina_crown.name=<newline>
 //item.pink_gold_peach_crown.name=<newline>
 item.super_crown.name=超級王冠
-//item.rosalina_crown.name=<newline>
 //item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=手帕
 
 //item.top_hat.name=<newline>
 
-item.smash_ball.name=粉碎球
-
-//item.annoying_dog.name=<newline>
-
 //item.ralsei_hat.name=<newline>
-
-item.headphones.name=耳機
-item.record_blank.name=空白音樂唱片
-item.record.champions_road.desc=Super Mario 3D World - Champion's Road
-item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
-item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
 
 item.mayro_cap.name=馬伊羅的帽子
 item.noteblock_head.name=NoteBlock的頭
-item.record.nb_sweden.desc=C418 - Sweden (NoteBlock Remix)
-item.record.nb_buoy_base_galaxy.desc=Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)
-item.record.nb_waluigi_pinball.desc=Mario Kart DS - Waluigi Pinball (NoteBlock Remix)
-item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)
 
 --- ENTITIES ---
 entity.toad.name=奇諾比奧
