Updated French languages

--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -7,17 +7,17 @@ itemGroup.mubble_costumes_tab=costum Mubble
 tile.vanadium_block.name=cube joli et mjenta
 tile.vanadium_ore.name=minrai cool et mjenta
 tile.red_bricks.name=brik rouj
-//tile.red_brick_stairs.name=<newline>
+tile.red_brick_stairs.name=escalator de briqe rouj
 tile.white_bricks.name=brik blanch
-//tile.white_brick_stairs.name=<newline>
+tile.white_brick_stairs.name=escalator de briqe blan
 tile.blunite.name=blunit
-//tile.blunite_stairs.name=<newline>
-//tile.blunite_wall.name=<newline>
+tile.blunite_stairs.name=escalator en blunit
+tile.blunite_wall.name=mur d blunit
 tile.polished_blunite.name=blunit tou bo tou propr
-//tile.polished_blunite_stairs.name=<newline>
-tile.carbonite.name=crbonit
-//tile.carbonite_stairs.name=<newline>
-//tile.carbonite_wall.name=<newline>
+tile.polished_blunite_stairs.name=mur de blunit propre
+tile.carbonite.name=crbolit
+tile.carbonite_stairs.name=scalier en carbolit
+tile.carbonite_wall.name=mur en carbolit
 tile.polished_carbonite.name=cobnite bo
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=blok foutbol
