--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -27,7 +27,7 @@ tile.gray_cloud_block.name=Bloc de nuage gris
 tile.black_cloud_block.name=Bloc de nuage noir
 tile.tomato.name=Tomate
 tile.salad.name=Salade
-//tile.cheese_block.name=<newline>
+tile.cheese_block.name=Bloc de fromage
 
 tile.question_block.name=Bloc ?
 tile.empty_block.name=Bloc vide
@@ -93,12 +93,12 @@ tile.light_gray_candy_cane_pillar.name=Pilier de sucre d'orge gris clair
 tile.gray_candy_cane_pillar.name=Pilier de sucre d'orge gris
 tile.black_candy_cane_pillar.name=Pilier de sucre d'orge noir
 
-//tile.green_hill_grass_block.name=<newline>
-//tile.green_hill_dirt.name=<newline>
+tile.green_hill_grass_block.name=Bloc d'herbe de Green Hill
+tile.green_hill_dirt.name=Terre de Green Hill
 tile.yellow_studiopolis_clapper.name=Clap jaune de Studiopolis
 tile.blue_studiopolis_clapper.name=Clap bleu de Studiopolis
 
-//tile.scarlet_grass_block.name=<newline>
+tile.scarlet_grass_block.name=Bloc d'herbe écarlate
 tile.scarlet_mushroom.name=Champignon écarlate
 tile.scarlet_orchid.name=Orchidée écarlate
 
@@ -150,7 +150,7 @@ item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harve
 
 --- COSTUMES ---
 item.headphones.name=Casque audio
-//item.christmas_hat.name=<newline>
+item.christmas_hat.name=Chapeau de Noël
 
 item.cappy.name=Cappy
 item.luigi_cap.name=Casquette de Luigi
