--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -7,27 +7,27 @@ itemGroup.mubble_costumes_tab=Mubble Kostüme
 tile.vanadium_block.name=Vanadium-Block
 tile.vanadium_ore.name=Vanadium-Erz
 tile.red_bricks.name=Rote Ziegelsteine
-//tile.red_brick_stairs.name=<newline>
+tile.red_brick_stairs.name=Rote Ziegeltreppe
 tile.white_bricks.name=Weiße Ziegelsteine
-//tile.white_brick_stairs.name=<newline>
+tile.white_brick_stairs.name=Weiße Ziegeltreppe
 tile.blunite.name=Blunite
-//tile.blunite_stairs.name=<newline>
-//tile.blunite_wall.name=<newline>
+tile.blunite_stairs.name=Blunite-Treppe
+tile.blunite_wall.name=Blunite-Mauer
 tile.polished_blunite.name=Polierter Blunite
-//tile.polished_blunite_stairs.name=<newline>
+tile.polished_blunite_stairs.name=Polierte Blunite-Treppe
 tile.carbonite.name=Carbonite
-//tile.carbonite_stairs.name=<newline>
-//tile.carbonite_wall.name=<newline>
+tile.carbonite_stairs.name=Carbonite-Treppe
+tile.carbonite_wall.name=Carbonite-Mauer
 tile.polished_carbonite.name=Polierter Carbonite
-//tile.polished_carbonite_stairs.name=<newline>
+tile.polished_carbonite_stairs.name=Polierte Carbonite-Treppe
 tile.footblock.name=Fußblock
-tile.white_cloud_block.name=Weiße Wolkenblock
-//tile.light_gray_cloud_block.name=<newline>
-//tile.gray_cloud_block.name=<newline>
-//tile.black_cloud_block.name=<newline>
-//tile.tomato.name=<newline>
-//tile.salad.name=<newline>
-//tile.cheese_block.name=<newline>
+tile.white_cloud_block.name=Weißer Wolkenblock
+tile.light_gray_cloud_block.name=Hellgrauer Wolkenblock
+tile.gray_cloud_block.name=Grauer Wolkenblock
+tile.black_cloud_block.name=Schwarzer Wolkenblock
+tile.tomato.name=Tomaten
+tile.salad.name=Salat
+tile.cheese_block.name=Käseblock
 
 tile.question_block.name=? Block
 tile.empty_block.name=Leerer Block
@@ -51,22 +51,22 @@ tile.green_mushroom_block.name=Grüner Pilzblock
 tile.yellow_mushroom_block.name=Gelber Pilzblock
 tile.purple_mushroom_block.name=Lila Pilzblock
 
-//tile.blue_tetris_block.name=<newline>
-//tile.light_blue_tetris_block.name=<newline>
-//tile.cyan_tetris_block.name=<newline>
-//tile.green_tetris_block.name=<newline>
-//tile.lime_tetris_block.name=<newline>
-//tile.yellow_tetris_block.name=<newline>
-//tile.orange_tetris_block.name=<newline>
-//tile.red_tetris_block.name=<newline>
-//tile.pink_tetris_block.name=<newline>
-//tile.magenta_tetris_block.name=<newline>
-//tile.purple_tetris_block.name=<newline>
-//tile.brown_tetris_block.name=<newline>
-//tile.white_tetris_block.name=<newline>
-//tile.light_gray_tetris_block.name=<newline>
-//tile.gray_tetris_block.name=<newline>
-//tile.black_tetris_block.name=<newline>
+tile.blue_tetris_block.name=Blauer Tetrisblock
+tile.light_blue_tetris_block.name=Hellblauer Tetrisblock
+tile.cyan_tetris_block.name=Türkiser Tetrisblock
+tile.green_tetris_block.name=Grüner Tetrisblock
+tile.lime_tetris_block.name=Hellgrüner Tetrisblock
+tile.yellow_tetris_block.name=Gelber Tetrisblock
+tile.orange_tetris_block.name=Orangener Tetrisblock
+tile.red_tetris_block.name=Roter Tetrisblock
+tile.pink_tetris_block.name=Pinker Tetrisblock
+tile.magenta_tetris_block.name=Magenta Tetrisblock
+tile.purple_tetris_block.name=Violetter Tetrisblock
+tile.brown_tetris_block.name=Brauner Tetrisblock
+tile.white_tetris_block.name=Weißer Tetrisblock
+tile.light_gray_tetris_block.name=Hellgrauer Tetrisblock
+tile.gray_tetris_block.name=Grauer Tetrisblock
+tile.black_tetris_block.name=Schwarzer Tetrisblock
 tile.tetris_glass.name=Tetris-Glas
 tile.japanese_tetris_cushion.name=Japanischer Tetris-Kissen
 tile.rainbow_tetris_scaffolding.name=Regenbogen Tetris-Gerüst
@@ -75,38 +75,38 @@ tile.monochrome_tetris_scaffolding.name=Einfarbiger Tetris-Gerüst
 tile.vampire_stone.name=Vampir-Stein
 tile.medusa_stone.name=Medusa's Stein
 tile.medusa_bricks.name=Medusa's Ziegelsteine
-//tile.medusa_brick_stairs.name=<newline>
-tile.blue_candy_cane_pillar.name=Blauer Zuckerstangensäule
-//tile.light_blue_candy_cane_pillar.name=<newline>
-//tile.cyan_candy_cane_pillar.name=<newline>
-tile.green_candy_cane_pillar.name=Grüner Zuckerstangensäule
-//tile.lime_candy_cane_pillar.name=<newline>
-tile.yellow_candy_cane_pillar.name=Gelber Zuckerstangensäule
-//tile.orange_candy_cane_pillar.name=<newline>
-tile.red_candy_cane_pillar.name=Roter Zuckerstangensäule
-//tile.pink_candy_cane_pillar.name=<newline>
-//tile.magenta_candy_cane_pillar.name=<newline>
+tile.medusa_brick_stairs.name=Medusa's Ziegeltreppe
+tile.blue_candy_cane_pillar.name=Blaue Zuckerstangensäule
+tile.light_blue_candy_cane_pillar.name=Hellblaue Zuckerstangensäule
+tile.cyan_candy_cane_pillar.name=Türkise Zuckerstangensäule
+tile.green_candy_cane_pillar.name=Grüne Zuckerstangensäule
+tile.lime_candy_cane_pillar.name=Hellblaue Zuckerstangensäule
+tile.yellow_candy_cane_pillar.name=Gelbe Zuckerstangensäule
+tile.orange_candy_cane_pillar.name=Orangene Zuckerstangensäule
+tile.red_candy_cane_pillar.name=Rote Zuckerstangensäule
+tile.pink_candy_cane_pillar.name=Pinke Zuckerstangensäule
+tile.magenta_candy_cane_pillar.name=Magenta Zuckerstangensäule
 tile.purple_candy_cane_pillar.name=Lila Zuckerstangensäule
-//tile.brown_candy_cane_pillar.name=<newline>
-//tile.white_candy_cane_pillar.name=<newline>
-//tile.light_gray_candy_cane_pillar.name=<newline>
-//tile.gray_candy_cane_pillar.name=<newline>
-//tile.black_candy_cane_pillar.name=<newline>
+tile.brown_candy_cane_pillar.name=Braune Zuckerstangensäule
+tile.white_candy_cane_pillar.name=Weiße Zuckerstangensäule
+tile.light_gray_candy_cane_pillar.name=Hellgraue Zuckerstangensäule
+tile.gray_candy_cane_pillar.name=Graue Zuckerstangensäule
+tile.black_candy_cane_pillar.name=Schwarze Zuckerstangensäule
 
-//tile.green_hill_grass_block.name=<newline>
-//tile.green_hill_dirt.name=<newline>
-//tile.yellow_studiopolis_clapper.name=<newline>
-//tile.blue_studiopolis_clapper.name=<newline>
+tile.green_hill_grass_block.name=Grüner Hügelgrassblock
+tile.green_hill_dirt.name=Grüne Hügelerde
+tile.yellow_studiopolis_clapper.name=Gelbe Studiopolis-Filmklappe
+tile.blue_studiopolis_clapper.name=Blaue Studiopolis-Filmklappe
 
-//tile.scarlet_grass_block.name=<newline>
-//tile.scarlet_mushroom.name=<newline>
-//tile.scarlet_orchid.name=<newline>
+tile.scarlet_grass_block.name=Scharlachroter Grassblock
+tile.scarlet_mushroom.name=Scharlachroter Pilz
+tile.scarlet_orchid.name=Scharlachrote Orchidee
 
 tile.iron_scaffolding.name=Eisen Gerüst
-tile.purple_bricks.name=Lila Ziegelsteine
-//tile.purple_brick_stairs.name=<newline>
-tile.cyan_bricks.name=Türkiser Ziegelsteine
-//tile.cyan_brick_stairs.name=<newline>
+tile.purple_bricks.name=Violette Ziegelsteine
+tile.purple_brick_stairs.name=Violette Ziegeltreppe
+tile.cyan_bricks.name=Türkise Ziegelsteine
+tile.cyan_brick_stairs.name=Türkise Ziegeltreppe
 tile.elder_pebbles.name=Elder Pebbles
 tile.space_matter.name=Space Matter
 
@@ -121,10 +121,10 @@ item.crepe.name=Crêpe
 item.chocolate_crepe.name=Schokoladen-Crêpe
 item.caramel_crepe.name=Karamell-Crêpe
 item.candy_cane.name=Zuckerstange
-//item.burger.name=<newline>
-//item.tomato.name=<newline>
-//item.salad.name=<newline>
-//item.cheese.name=<newline>
+item.burger.name=Burger
+item.tomato.name=Tomate
+item.salad.name=Salat
+item.cheese.name=Käse
 
 item.super_mushroom.name=Super-Pilz
 item.peach.name=Pfirsich
@@ -136,7 +136,7 @@ item.blue_coin.name=Blaue Münze
 
 item.smash_ball.name=Smash Ball
 
-//item.annoying_dog.name=<newline>
+item.annoying_dog.name=Nerviger Hund
 
 item.record_blank.name=Leere Schallplatte
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
@@ -150,7 +150,7 @@ item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harve
 
 --- COSTUMES ---
 item.headphones.name=Kopfhörer
-//item.christmas_hat.name=<newline>
+item.christmas_hat.name=Weihnachtshut
 
 item.cappy.name=Cappy
 item.luigi_cap.name=Luigi-Mütze
@@ -161,16 +161,16 @@ item.wing_cap.name=Wing-Mütze
 item.gooigi_cap.name=Gooigi's Mütze
 item.princess_peach_crown.name=Prinzessin Peach's Krone
 item.princess_daisy_crown.name=Prinzessin Daisy's Krone
-//item.rosalina_crown.name=<newline>
+item.rosalina_crown.name=Rosalina's Krone
 item.pink_gold_peach_crown.name=Rosagold-Peach's Krone
 item.super_crown.name=Super Krone
-//item.broque_monsieur_head.name=<newline>
+item.broque_monsieur_head.name=Broque Monsieur's Kopf
 
 item.bandana.name=Kopftuch
 
-//item.top_hat.name=<newline>
+item.top_hat.name=Zylinderhut
 
-//item.ralsei_hat.name=<newline>
+item.ralsei_hat.name=Ralsei's Hut
 
 item.mayro_cap.name=Mayro's Mütze
 item.noteblock_head.name=NoteBlock's Kopf
@@ -186,7 +186,7 @@ subtitles.item.cape_feather.use=Federmütze benutzt
 subtitles.item.smash_ball.use=Smash Ball benutzt
 subtitles.entity.toad.ambient=Toad murmelt
 subtitles.entity.toad.hurt=Toad verletzt
-subtitles.entity.toad.death=Toad starb
+subtitles.entity.toad.death=Toad stirbt
 
 --- ADVANCEMENTS ---
 advancements.mubble.root.title=Mubble
