--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -99,6 +99,7 @@ tile.purple_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝldɹnԀ
 //tile.blue_studiopolis_clapper.name=<newline>
 
 //tile.scarlet_grass_block.name=<newline>
+//tile.scarlet_grass.name=<newline>
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
