--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -99,6 +99,7 @@ tile.purple_candy_cane_pillar.name=Pilar de bastón de caramelo morado
 //tile.blue_studiopolis_clapper.name=<newline>
 
 //tile.scarlet_grass_block.name=<newline>
+//tile.scarlet_grass.name=<newline>
 tile.scarlet_mushroom.name=Champiñón escarlata
 //tile.scarlet_orchid.name=<newline>
 
