--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -99,6 +99,7 @@ tile.yellow_studiopolis_clapper.name=Clap jaune de Studiopolis
 tile.blue_studiopolis_clapper.name=Clap bleu de Studiopolis
 
 tile.scarlet_grass_block.name=Bloc d'herbe écarlate
+tile.scarlet_grass.name=Herbe écarlate
 tile.scarlet_mushroom.name=Champignon écarlate
 tile.scarlet_orchid.name=Orchidée écarlate
 
