--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -99,6 +99,7 @@ tile.yellow_studiopolis_clapper.name=Gele studiopolisklepel
 tile.blue_studiopolis_clapper.name=Blauwe studiopolisklepel
 
 //tile.scarlet_grass_block.name=<newline>
+//tile.scarlet_grass.name=<newline>
 tile.scarlet_mushroom.name=Scharlake paddenstoel
 tile.scarlet_orchid.name=Scharlake orchidee
 
