--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -99,6 +99,7 @@ tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 //tile.blue_studiopolis_clapper.name=<newline>
 
 //tile.scarlet_grass_block.name=<newline>
+//tile.scarlet_grass.name=<newline>
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
