--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -7,27 +7,27 @@ itemGroup.mubble_costumes_tab=Trajes de Mubble
 tile.vanadium_block.name=Bloque de vanadio 
 tile.vanadium_ore.name=Mena de vanadio
 tile.red_bricks.name=Ladrillos rojos
-//tile.red_brick_stairs.name=Escalera de Ladrillos rojos
+tile.red_brick_stairs.name=Escalera de ladrillos rojos
 tile.white_bricks.name=Ladrillos blancos
-//tile.white_brick_stairs.name=Escalera de Ladrillos blancos
+tile.white_brick_stairs.name=Escalera de ladrillos blancos
 tile.blunite.name=Blunita
-//tile.blunite_stairs.name=Escalera de Blunita
-//tile.blunite_wall.name=<newline>
+tile.blunite_stairs.name=Escalera de blunita
+tile.blunite_wall.name=Muro de blunita
 tile.polished_blunite.name=Blunita pulida
-//tile.polished_blunite_stairs.name=Escalera de Blunita pulida
+tile.polished_blunite_stairs.name=Escalera de blunita pulida
 tile.carbonite.name=Carbonita
-//tile.carbonite_stairs.name=Escalera de Carbonita
-//tile.carbonite_wall.name=<newline>
+tile.carbonite_stairs.name=Escalera de carbonita
+tile.carbonite_wall.name=Muro de carbonita
 tile.polished_carbonite.name=Carbonita pulida
-//tile.polished_carbonite_stairs.name=Escalera de Carbonita pulida
+tile.polished_carbonite_stairs.name=Escalera de carbonita pulida
 tile.footblock.name=Futbloque
 tile.white_cloud_block.name=Bloque de nube blanca
 tile.light_gray_cloud_block.name=Bloque de nube gris claro
 tile.gray_cloud_block.name=Bloque de nube gris
 tile.black_cloud_block.name=Bloque de nube negra
-//tile.tomato.name=<newline>
-//tile.salad.name=<newline>
-//tile.cheese_block.name=<newline>
+tile.tomato.name=Tomates
+tile.salad.name=Ensalada
+tile.cheese_block.name=Bloque de queso
 
 tile.question_block.name=Bloque ?
 tile.empty_block.name=Bloque vacío
@@ -51,63 +51,63 @@ tile.green_mushroom_block.name=Bloque de champiñón verde
 tile.yellow_mushroom_block.name=Bloque de champiñón amarillo
 tile.purple_mushroom_block.name=Bloque de champiñón púrpura
 
-//tile.blue_tetris_block.name=<newline>
-//tile.light_blue_tetris_block.name=<newline>
-//tile.cyan_tetris_block.name=<newline>
-//tile.green_tetris_block.name=<newline>
-//tile.lime_tetris_block.name=<newline>
-//tile.yellow_tetris_block.name=<newline>
-//tile.orange_tetris_block.name=<newline>
-//tile.red_tetris_block.name=<newline>
-//tile.pink_tetris_block.name=<newline>
-//tile.magenta_tetris_block.name=<newline>
-//tile.purple_tetris_block.name=<newline>
-//tile.brown_tetris_block.name=<newline>
-//tile.white_tetris_block.name=<newline>
-//tile.light_gray_tetris_block.name=<newline>
-//tile.gray_tetris_block.name=<newline>
-//tile.black_tetris_block.name=<newline>
-tile.tetris_glass.name=Bloque Tetris de cristal
+tile.blue_tetris_block.name=Bloque de Tetris
+tile.light_blue_tetris_block.name=Bloque de Tetris azul
+tile.cyan_tetris_block.name=Bloque de Tetris cian
+tile.green_tetris_block.name=Bloque de Tetris verde
+tile.lime_tetris_block.name=Bloque de Tetris lima
+tile.yellow_tetris_block.name=Bloque de Tetris amarillo
+tile.orange_tetris_block.name=Bloque de Tetris naranja
+tile.red_tetris_block.name=Bloque de Tetris rojo
+tile.pink_tetris_block.name=Bloque de Tetris rosa
+tile.magenta_tetris_block.name=Bloque de Tetris magenta
+tile.purple_tetris_block.name=Bloque de Tetris violeta
+tile.brown_tetris_block.name=Bloque de Tetris marrón
+tile.white_tetris_block.name=Bloque de Tetris blanco
+tile.light_gray_tetris_block.name=Bloque de Tetris gris claro
+tile.gray_tetris_block.name=Bloque de Tetris gris
+tile.black_tetris_block.name=Bloque de Tetris negro
+tile.tetris_glass.name=Bloque de Tetris de cristal
 tile.japanese_tetris_cushion.name=Cojín Tetris japonés
-tile.rainbow_tetris_scaffolding.name=Andamio Tetris arco iris
-tile.monochrome_tetris_scaffolding.name=Andamio Tetris monocromático
+tile.rainbow_tetris_scaffolding.name=Andamio de Tetris arco iris
+tile.monochrome_tetris_scaffolding.name=Andamio de Tetris monocromático
 
 tile.vampire_stone.name=Piedra vampiro
 tile.medusa_stone.name=Piedra medusa
 tile.medusa_bricks.name=Ladrillos de medusa
-tile.medusa_brick_stairs.name=Escalera de ladrillos de Medusa
+tile.medusa_brick_stairs.name=Escalera de ladrillos de medusa
 tile.blue_candy_cane_pillar.name=Pilar de bastón de caramelo azul
-//tile.light_blue_candy_cane_pillar.name=<newline>
-//tile.cyan_candy_cane_pillar.name=<newline>
+tile.light_blue_candy_cane_pillar.name=Pilar de bastón de caramelo celeste
+tile.cyan_candy_cane_pillar.name=Pilar de bastón de caramelo cian
 tile.green_candy_cane_pillar.name=Pilar de bastón de caramelo verde
-//tile.lime_candy_cane_pillar.name=<newline>
+tile.lime_candy_cane_pillar.name=Pilar de bastón de caramelo lima
 tile.yellow_candy_cane_pillar.name=Pilar de bastón de caramelo amarillo
-//tile.orange_candy_cane_pillar.name=<newline>
+tile.orange_candy_cane_pillar.name=Pilar de bastón de caramelo naranja
 tile.red_candy_cane_pillar.name=Pilar de bastón de caramelo rojo
-//tile.pink_candy_cane_pillar.name=<newline>
-//tile.magenta_candy_cane_pillar.name=<newline>
+tile.pink_candy_cane_pillar.name=Pilar de bastón de caramelo rosa
+tile.magenta_candy_cane_pillar.name=Pilar de bastón de caramelo magenta
 tile.purple_candy_cane_pillar.name=Pilar de bastón de caramelo morado
-//tile.brown_candy_cane_pillar.name=<newline>
-//tile.white_candy_cane_pillar.name=<newline>
-//tile.light_gray_candy_cane_pillar.name=<newline>
-//tile.gray_candy_cane_pillar.name=<newline>
-//tile.black_candy_cane_pillar.name=<newline>
+tile.brown_candy_cane_pillar.name=Pilar de bastón de caramelo marrón
+tile.white_candy_cane_pillar.name=Pilar de bastón de caramelo blanco
+tile.light_gray_candy_cane_pillar.name=Pilar de bastón de caramelo gris claro
+tile.gray_candy_cane_pillar.name=Pilar de bastón de caramelo gris
+tile.black_candy_cane_pillar.name=Pilar de bastón de caramelo negro
 
-//tile.green_hill_grass_block.name=<newline>
-//tile.green_hill_dirt.name=<newline>
-//tile.yellow_studiopolis_clapper.name=<newline>
-//tile.blue_studiopolis_clapper.name=<newline>
+tile.green_hill_grass_block.name=Bloque de césped de Green Hill
+tile.green_hill_dirt.name=Tierra de Green Hill
+tile.yellow_studiopolis_clapper.name=Badajo de Studiópolis amarillo
+tile.blue_studiopolis_clapper.name=Badajo de Studiópolis azul
 
-//tile.scarlet_grass_block.name=<newline>
-//tile.scarlet_grass.name=<newline>
+tile.scarlet_grass_block.name=Bloque de césped escarlata
+tile.scarlet_grass.name=Césped de escarlata
 tile.scarlet_mushroom.name=Champiñón escarlata
-//tile.scarlet_orchid.name=<newline>
+tile.scarlet_orchid.name=Orquídea escarlata
 
 tile.iron_scaffolding.name=Andamio de hierro
 tile.purple_bricks.name=Ladrillos morados
-//tile.purple_brick_stairs.name=Escalera de Ladrillos morados
+tile.purple_brick_stairs.name=Escalera de ladrillos morados
 tile.cyan_bricks.name=Ladrillos cian
-//tile.cyan_brick_stairs.name=Escalera de Ladrillos cian
+tile.cyan_brick_stairs.name=Escalera de ladrillos cian
 tile.elder_pebbles.name=Guijarros antiguos
 tile.space_matter.name=Materia espacial
 
@@ -123,9 +123,9 @@ item.chocolate_crepe.name=Crepe de chocolate
 item.caramel_crepe.name=Crepe de caramelo
 item.candy_cane.name=Bastón de caramelo
 item.burger.name=Hamburguesa
-//item.tomato.name=<newline>
-//item.salad.name=<newline>
-//item.cheese.name=<newline>
+item.tomato.name=Tomate
+item.salad.name=Ensalada
+item.cheese.name=Queso
 
 item.super_mushroom.name=Súper champiñón
 item.peach.name=Durazno
@@ -137,7 +137,7 @@ item.blue_coin.name=Moneda azul
 
 item.smash_ball.name=Bola Smash
 
-//item.annoying_dog.name=Perro molesto
+item.annoying_dog.name=Perro molesto
 
 item.record_blank.name=Disco en blanco
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
@@ -151,7 +151,7 @@ item.record.nb_harvest_hazards.desc=Donkey Kong Country: Tropical Freeze - Harve
 
 --- COSTUMES ---
 item.headphones.name=Cascos
-//item.christmas_hat.name=<newline>
+item.christmas_hat.name=Sombrero de Navidad
 
 item.cappy.name=Cappy
 item.luigi_cap.name=Gorra de Luigi
@@ -162,14 +162,14 @@ item.wing_cap.name=Wing cap
 item.gooigi_cap.name=Gorra de Gooigi
 item.princess_peach_crown.name=Corona de la Princesa Peach
 item.princess_daisy_crown.name=Corona de la Princesa Daisy
-//item.rosalina_crown.name=<newline>
+item.rosalina_crown.name=Corona de Estela
 item.pink_gold_peach_crown.name=Corona de Peach de oro rosa
 item.super_crown.name=Supercorona
-//item.broque_monsieur_head.name=<newline>
+item.broque_monsieur_head.name=Cabeza de Broque Monsieur
 
 item.bandana.name=Pañuelo
 
-//item.top_hat.name=<newline>
+item.top_hat.name=Sombrero de copa
 
 item.ralsei_hat.name=Sombrero de Ralsei
 
